--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev": "concurrently \"yarn server\" \"yarn client\""
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
