--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -25,7 +25,6 @@
     "linebreak-style": ["error", "unix"],
     "react-hooks/rules-of-hooks": "warn",
     "react-hooks/exhaustive-deps": "warn",
-    "no-unused-vars":"off",
-    "react/prop-types": 0
+    "no-unused-vars":"off"
   }
 }
