feat: paginator and filter connected with api request handle with redux and axios. fix: api products length.

--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -4,7 +4,8 @@
     "paths": {
       "assets": ["./assets/*"],
       "styles": ["./styles/*"],
-      "components": ["./components/*"]
+      "components": ["./components/*"],
+      "actions": ["./actions"]
     }
   }
 }
