--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -11,20 +11,20 @@
     "node": true,
     "jest": true
   },
-  "plugins": [
-    "react",
-    "react-hooks"
-  ],
-  "extends": ["eslint:recommended"],
+  "extends": ["eslint:recommended", "plugin:react/recommended",  "plugin:react-hooks/recommended"],
   "settings": {
     "react": {
       "version": "detect"
     }
   },
+  "plugins": [
+    "react",
+    "react-hooks"
+  ],
   "rules": {
-    "linebreak-style": ["error", "unix"],
-    "react-hooks/rules-of-hooks": "warn",
-    "react-hooks/exhaustive-deps": "warn",
-    "no-unused-vars":"off"
+    // "linebreak-style": ["error", "unix"],
+    // "react-hooks/rules-of-hooks": "warn",
+    "react-hooks/exhaustive-deps": "off"
+    // "no-unused-vars":"off"
   }
 }
