fix: classes in prop type

--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -5,7 +5,7 @@
       "assets": ["./assets/*"],
       "styles": ["./styles/*"],
       "components": ["./components/*"],
-      "actions": ["./actions"]
+      "actions": ["./actions/*"]
     }
   }
 }
