--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -24,7 +24,8 @@
   "rules": {
     // "linebreak-style": ["error", "unix"],
     // "react-hooks/rules-of-hooks": "warn",
-    "react-hooks/exhaustive-deps": "off"
     // "no-unused-vars":"off"
+    "react-hooks/exhaustive-deps": "off",
+    "react/display-name": "off"
   }
 }
