--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "lodash.range": "^3.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.0.8",
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
