--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -52,6 +52,8 @@
     "customize-cra": "^1.0.0",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
+    "history": "^5.0.0",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
     "react-app-rewired": "^2.1.6"
   }
 }
