--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "shortid": "^2.2.15",
     "styled-components": "^5.1.1"
   },
   "scripts": {
