--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "server": "nodemon -r dotenv/config server.js",
     "client": "yarn --cwd client start",
     "dev": "concurrently \"yarn server\" \"yarn client\"",
-    "build": "yarn --cwd client build"
+    "build": "yarn --cwd client install && yarn --cwd client build"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
